[package]
name = "receipt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart"]}
google-vision1 = "5.0.3"
http-body-util = "0.1.0-rc.3"
reqwest = "0.11.22"
serde = "1.0.188"
serde_json = "1.0.107"
shuttle-axum = "0.28.0"
shuttle-runtime = "0.28.0"
shuttle-secrets = "0.28.0"
tokio = {version = "1.32.0", features = ["tokio-macros"]}
