[package]
name = "receipt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["multipart", "headers"]}
base64 = "0.21.4"
chrono = "0.4.31"
chrono-tz = "0.8.3"
google-vision1 = "5.0.3"
http-body-util = "0.1.0-rc.3"
reqwest = "0.11.22"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
sha256 = "1.4.0"
shuttle-aws-rds = { version = "0.28.0", features = ["postgres"] }
shuttle-axum = "0.28.0"
shuttle-persist = "0.28.0"
shuttle-runtime = "0.28.0"
shuttle-secrets = "0.28.0"
sqlx = {version="0.7.2", features = ["chrono"]}
thiserror = "1.0.49"
tokio = {version = "1.32.0", features = ["tokio-macros"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
