[package]
name = "receipt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.4", features = ["multipart"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
base64 = "0.21.4"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.3"
csv = "1.3.0"
headers = "0.4.0"
http-body-util = "0.1.0-rc.3"
itertools = "0.11.0"
reqwest = "0.11.22"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
sha256 = "1.4.0"
sqlx = { version="0.7.2", features = ["chrono", "postgres", "runtime-tokio"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"


[[bin]]
name = "receipt-rs"
path = "src/main.rs"
